(fixes):  - box shadow card ✅  - code structure ✅  - spacing ✅  - align card center ✅

--- a/css/index.css
+++ b/css/index.css
@@ -22,10 +22,24 @@ body {
   font-family: "Karla", sans-serif;
   background-color: var(--grayish-blue);
 
-  max-width: 1400px;
-  width: 80%;
-  margin: 5rem auto;
+  width: calc(100vw - 2rem);
+  min-height: 100vh;
+
+  display: grid;
+  place-items: center;
+  margin: 1rem;
 }
+
+/*
+ *
+ *
+ *
+ * @TODOS
+ *   - box shadow card ✅
+ *   - code structure ✅
+ *   - spacing ✅
+ *   - align card center ✅
+ */
 
 /*
  * Typography
@@ -33,45 +47,37 @@ body {
 
 .join__title {
   font-size: 1.4rem;
-  margin-bottom: 1.5rem;
   color: var(--cyan);
   font-weight: bold;
+
+  margin-bottom: 1.5rem;
 }
 
 .join__sub-title {
   font-size: 1.1rem;
-  margin-bottom: 1rem;
   color: var(--bright-yellow);
   font-weight: bold;
+
+  margin-bottom: 1rem;
 }
 
 .join__para {
   line-height: 1.7;
   color: var(--light-gray);
+
   max-width: 60ch;
 }
 
 .subscribe__title {
   font-size: 1.4rem;
-  margin-bottom: 1.5rem;
   font-weight: bold;
-}
 
-.subscribe__sub-title {
-  display: flex;
-  align-items: center;
-  justify-content: end;
-  column-gap: 1rem;
-  margin-bottom: 0.5rem;
+  margin-bottom: 1.5rem;
 }
 
 .subscribe__sub-title span:first-child {
   font-size: 2rem;
   font-weight: bold;
-}
-
-.subscribe__para {
-  margin-bottom: 1rem;
 }
 
 .subscribe__sub-title span:last-child {
@@ -84,6 +90,21 @@ body {
   margin-bottom: 1.5rem;
   font-weight: bold;
 }
+/*
+ * Layout
+ */
+
+.subscribe__sub-title {
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  column-gap: 1rem;
+  margin-bottom: 0.5rem;
+}
+
+.subscribe__para {
+  margin-bottom: 1rem;
+}
 
 /*
  * Components
@@ -93,12 +114,14 @@ body {
   background-color: white;
   border-radius: 0.5rem 0.5rem 0 0;
   padding: 2rem;
+  box-shadow: 1px 5px 10px 2px rgba(0, 0, 0, 0.3);
 }
 
 .subscribe--card {
   background-color: var(--cyan);
   padding: 2rem;
   color: white;
+  box-shadow: 1px 5px 10px 2px rgba(0, 0, 0, 0.3);
 }
 
 .why--card {
@@ -106,6 +129,7 @@ body {
   padding: 2rem;
   color: white;
   border-radius: 0 0 0.5rem 0.5rem;
+  box-shadow: 0 6px 5px 1px rgb(0 0 0 / 30%);
 }
 
 .subscribe__button:active,
@@ -117,14 +141,16 @@ body {
 }
 
 .subscribe__button {
-  padding: 1rem 2rem;
-  margin: 1rem 0;
-  border-radius: 0.5rem;
   text-align: center;
   font-weight: bold;
-  display: inline-block;
-  width: 100%;
   background-color: var(--bright-yellow);
+
+  padding: 1rem 2rem;
+  margin: 1rem 0;
+  width: 100%;
+
+  border-radius: 0.5rem;
+  display: inline-block;
 }
 
 .subscribe__button:hover {
@@ -132,22 +158,15 @@ body {
 }
 
 .why__list {
+  opacity: 0.8;
+  line-height: 1.4;
+
   list-style: none;
   margin: 0;
   padding: 0;
-  line-height: 1.4;
-  opacity: 0.8;
 }
 
 @media (min-width: 400px) {
-  body {
-    max-height: 100vh;
-    width: 100vw;
-
-    display: grid;
-    place-items: center;
-  }
-
   .lower-section {
     display: flex;
   }
@@ -158,6 +177,7 @@ body {
 
   .why--card {
     border-radius: 0 0 0.5rem 0;
+    box-shadow: 3px 3px 10px 0 rgb(0 0 0 / 30%);
   }
 
   .join--card {
